Added Localization service model